--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <link rel="icon" href="/assets/img/favicon.ico">
   
   <link rel="stylesheet" type="text/css" href="/./main.0cf68a.css">
+	// 重定向域名 以后会该为 https://wu-yu-pei.gitee.io
+	<script type="text/javascript">window.location.href="http://localhost:4000";</script>
   <style type="text/css">
   
     #container.show {
