--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
   
   <link rel="stylesheet" type="text/css" href="/./main.0cf68a.css">
 	// 重定向域名 以后会该为 https://wu-yu-pei.gitee.io
-	<script type="text/javascript">window.location.href="http://localhost:4000";</script>
+	<script type="text/javascript">
+        alert("最新blog已迁移至https://wu-yu-pei.gitee.io")
+        window.location.href="http://localhost:4000";
+	</script>
   <style type="text/css">
   
     #container.show {
