--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	// 重定向域名 以后会该为 https://wu-yu-pei.gitee.io
 	<script type="text/javascript">
         alert("最新blog已迁移至https://wu-yu-pei.gitee.io")
-        window.location.href="http://localhost:4000";
+        window.location.href="https://wu-yu-pei.gitee.io";
 	</script>
   <style type="text/css">
   
