--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="icon" href="/assets/img/favicon.ico">
   
   <link rel="stylesheet" type="text/css" href="/./main.0cf68a.css">
-	// 重定向域名 以后会该为 https://wu-yu-pei.gitee.io
+	// blog已迁移至https://wu-yu-pei.gitee.io
 	<script type="text/javascript">
         alert("最新blog已迁移至https://wu-yu-pei.gitee.io")
         window.location.href="https://wu-yu-pei.gitee.io";
